Adding new components.

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,7 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700');
 
-$bootstrap-purple-dark: #381569;
-$bootstrap-purple-medium: #53219c;
-$bootstrap-purple-light: #8854d6;
+$dark-blue-color: #2a86c8;
+$medium-blue-color: #189bd7;
+$light-blue-color: #49bee6;
+
+$dark-orange-color: #f05923;
+$light-orange-color: #f5825c;
+
+$dark-green-color: #279445;
+$light-green-color: #68bd45;
+$lighter-green-color: #8af153;
+
+$dark-purple-color: #27256a;
+$light-purple-color: #3e68b2;
+
 $font-family-sans-serif: 'Poppins', sans-serif;
-$font-color: rgba(0, 0, 0, 0.72)
+$font-color-dark: rgba(0, 0, 0, 0.72);
+$font-color-light: rgb(255, 255, 255)
