Adding more components.

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,7 @@
 $dark-blue-color: #2a86c8;
 $medium-blue-color: #189bd7;
 $light-blue-color: #49bee6;
+$light-blue-color-transparent: rgba(73, 190, 230, 0.3);
 
 $dark-orange-color: #f05923;
 $light-orange-color: #f5825c;
